# assay

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
fixtures/golden/flows/flow-implementation-ticket/: step-01.json  (+16 more)
fixtures/golden/single/: c1-ac-unchecked.json  c2-step-not-done.json  c3-extra-no-justification.json  c3-justification-pending-warn.json  c3-justification-rejected-flag-off.json  c3-justification-rejected-flag-on.json  c3-missing-impl-complete.json  c3-missing-impl-pending.json  c4-failure-justification-rejected-flag-on.json  c4-failure-with-justification.json  c4-skip-with-justification.json  c4-skipped-no-justification.json  c4-superseded-failing.json  c4-tests-failing.json  c4-testtype-missing.json  check-all-issues.json  check-incomplete-mid-session.json  check-near-complete.json  check-ready-to-close.json  data-integrity.json  happy-action.json
fixtures/seeds/flows/: flow-implementation-ticket.json  flow-verification-ticket.json
fixtures/seeds/single/: c1-ac-unchecked.json  c2-step-not-done.json  c3-extra-no-justification.json  c3-justification-pending-warn.json  c3-justification-rejected-flag-off.json  c3-justification-rejected-flag-on.json  c3-missing-impl-complete.json  c3-missing-impl-pending.json  c4-failure-justification-rejected-flag-on.json  c4-failure-with-justification.json  c4-skip-with-justification.json  c4-skipped-no-justification.json  c4-superseded-failing.json  c4-tests-failing.json  c4-testtype-missing.json  check-all-issues.json  check-incomplete-mid-session.json  check-near-complete.json  check-ready-to-close.json  data-integrity.json  happy-action.json
src/assay/: __init__.py  types.py
src/assay/config/: __init__.py  defaults.py  hash.py  loader.py  merge.py  safe_ranges.py  schema.py
src/assay/runtime/: __init__.py  assay.py  enums.py  field_declarations.py  id_generator.py  operations_registry.py  version.py
tests/: test_assay_differential.py  test_config.py  test_parity_edges.py  test_smoke.py
(+59 files in other folders)
