[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assay-forge"
version = "0.1.0"
description = "Self-contained, deterministic work-session completion gate (Python port of the SpecForge assayforge engine)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Gabriel Augusto Gonçalves", email = "gab.augustog@gmail.com" }]
keywords = ["spec", "work-session", "completion-gate", "specsmither", "assayforge", "specforge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/blacksmithers/assay"
Repository = "https://github.com/blacksmithers/assay"
Issues = "https://github.com/blacksmithers/assay/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/assay"]

[tool.hatch.build.targets.sdist]
include = ["src/assay", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001/2/3: ambiguous-unicode — guidance prose is ported verbatim and
# intentionally contains × – → ≥ etc.; preserving them is required for fidelity.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["assay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
